--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,29 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+**/*.bit
+**/*.config
+**/*.json
+**/*.vcd
+*.hex
+*.wav
+*.bin
+*.out
+build/
+digilent_arty.cache/
+digilent_arty.hw/
+digilent_arty.ip_user_files/
+.Xil/
+report/
+vivado_*.backup.*
+reports
+usage_statistics_webtalk.xml
+build/out.bit
+usage_statistics_webtalk.html
+build/
+.vscode
+old
+clockInfo.txt
+env/
+fpga/opensourceSDRLabKintex7/openFPGALoader
