--- a/fpga/opensourceSDRLabKintex7/Makefile
+++ b/fpga/opensourceSDRLabKintex7/Makefile
@@ -14,7 +14,7 @@ all: $(BISTREAM)
 
 $(BISTREAM): buildFolder
 	@echo "Building the project and Generate Bitstream..."
-	$(VIVADO) -mode batch -nolog -nojournal -source run.tcl
+	$(VIVADO) -mode batch -source utils/run.tcl
 	if [ -n "$(BISTREAM)" ] && [ "$(BISTREAM)" != "./build/out.bit" ]; then mv ./build/out.bit "$(BISTREAM)"; fi
 	@echo "Bitstream generated at $(BISTREAM)"
 	
@@ -40,13 +40,20 @@ flash:
 
 remote:
 	@echo "Uploading the bitstream to a remote server..."
-	./upload_remote.sh $(BISTREAM)
+	./utils/upload_remote.sh $(BISTREAM)
 	@echo "Bitstream uploaded to remote server"
 
 generate_ips:
 	@echo "Generating IPs using vivado"
-	mkdir -p ip
-	$(VIVADO) -mode batch -nolog -nojournal -source generate_ip.tcl
+	mkdir -p ip constraints
+	litedram_gen utils/opxck7.yml
+	cp build/gateware/litedram_core.v .
+	cp build/gateware/litedram_core.xdc constraints/
+	$(VIVADO) -mode batch -nolog -nojournal -source utils/generate_ip.tcl
+
+remove_ips:
+	@echo "Deleting IPs"
+	rm -rf ip ip_project
 
 help:
 	@echo "Usage: make [target]"
@@ -57,6 +64,7 @@ help:
 	@echo "  flash       - Flash the bitstream onto the FPGA"
 	@echo "  remote      - Upload the bitstream to a remote server"
 	@echo "  generate_ip - Generate IPs used in project"
+	@echo "  remove_ip   - Remove generated IPs"
 	@echo "  help        - Show this help message"
 
 run_all: $(BISTREAM) load
