Concertando temporização do wishbone do Wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ fpga/opensourceSDRLabKintex7/vivado.log
 fpga/opensourceSDRLabKintex7/ip/clk_wiz_0/doc/clk_wiz_v6_0_changelog.txt
 fpga/opensourceSDRLabKintex7/tight_setup_hold_pins.txt
 obj_dir
+fpga/opensourceSDRLabKintex7/andbg_hs_err_pid1887765.log
+fpga/opensourceSDRLabKintex7/andbg_hs_err_pid2182098.log
+fpga/opensourceSDRLabKintex7/andbg_hs_err_pid2861896.log
+fpga/opensourceSDRLabKintex7/andbg_hs_err_pid3039004.log
